--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "mongoose": "^5.0.9",
         "morgan": "~1.8.1",
         "multer": "^1.3.0",
-        "request-promise": "^4.2.1",
+        "request": "^2.88.0",
+        "request-promise": "^4.2.2",
         "run-middleware": "^0.6.6",
         "sanitize-html": "^1.14.1"
     },
